копия xml на нашем сервере

--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@ p.news_date,
   box-sizing: border-box;
   max-height: 700px;
   object-fit: cover;
+  border-radius: 20px;
 }
 
 .feed .zoomable {
@@ -146,7 +147,8 @@ p.news_date,
 }
 
 .feed .zooming_chart.active img {
-  max-height: none;
+  /* max-height: none; */
+  max-height: -webkit-fill-available;
   width: max-content;
   padding: 20px;
 }
@@ -292,6 +294,28 @@ swiper-slide {
   height: fit-content;
 }
 
+.news_dateTag-wrapper {
+  margin-block: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+
+.news_dateTag-wrapper .news__tag {
+  border-radius: 10px;
+  padding: 6px 12px;
+  font-weight: 300;
+  width: fit-content;
+  color: #000;
+  background: #e8e8e8;
+}
+
+.wrapper.limited .news_dateTag-wrapper .news__tag {
+	border-radius: unset;
+	background: #e8e8e8 !important;
+}
+
 p.news_date {
   margin-block: 10px;
   display: block;
@@ -405,6 +429,10 @@ p.news_date {
     font-size: 16px;
   }
 
+  .news_dateTag-wrapper .news__tag {
+    font-size: 14px !important;
+  }
+
   .feed .t-redactor__preface,
   .feed .t-redactor__preface * {
     font-size: 22px;
@@ -413,6 +441,10 @@ p.news_date {
   .feed ul,
   .feed ol {
     padding-left: 28px !important;
+  }
+
+  .feed img {
+    border-radius: 10px;
   }
 }
 
